--- a/week three/week 5/practie.html/port.css
+++ b/week three/week 5/practie.html/port.css
@@ -1,6 +1,5 @@
 *{
     text-decoration: none;
-    background-color:#00;
     margin: 10px;
     text-decoration-color: rgb(212, 196, 15);
     box-sizing:border-box;
@@ -9,11 +8,13 @@ body{
     max-width: 1500px;
     margin: 0 auto;
     text-decoration-color: rgb(177, 170, 95);
+    color: rgb(249, 252, 255);
+    background-color: rgb(1, 14, 13);
 }
 .navbar{
     padding-right: 20px;
     padding-left: 20px;
-    background-color: rgb(49, 135, 107);
+    background-color: rgb(20, 77, 58);
 }
 .navdiv{
     display: flex;
@@ -21,7 +22,7 @@ body{
     justify-content: space-between;
 }
 .logo a{
-    color: rgb(2, 15, 28);
+    color:  rgb(249, 252, 255);
     font-size:30px;
     font-weight: bolder;
 }
@@ -33,7 +34,7 @@ li{
 }
 
 li a{
-    color: rgb(2, 15, 28); font-size:large;
+    color: rgb(249, 252, 255); font-size:large;
     font-size: larger;
     font-weight: bold;
 }
@@ -135,14 +136,13 @@ h4{
     display: grid;
     outline: none; border: none;
     grid-template-columns: repeat(2, 1fr);
-    background: linear-gradient(45deg,rgb(181, 155, 204),lightgreen);
     position: relative
   }
 
 button{
     margin-left: 0;
-    font-size: 20px;
-    border-radius: 5px;
+    font-size: 15px;
+    border-radius: 3px;
     font-weight: bold;
     margin-top: 0;
 }
@@ -165,4 +165,16 @@ button:hover{
     display: block;
     border-radius: 5px;
     margin-left: 20px;
+}
+
+@media screen and (max-width: 395px){
+    h1{
+        font-size: 10px;
+    }
+    .navbar{
+        padding-right: 5px;
+        padding-left: 5px;
+        background-color: rgb(20, 77, 58);
+    }
+    
 }
